# gEngine

./: CMakeLists.txt  Compile.bat  Compile.ps1  Makefile  README.md  compile.sh
Headers/: App.hpp  Pipeline.hpp  Window.hpp
Headers/Device/: Debug.hpp  Device.hpp  DeviceStructs.hpp  Helper.hpp
Sources/: Pipeline.cpp  Window.cpp
Sources/Device/: Debug.cpp  Device.cpp  DeviceHelper.cpp  DeviceStructs.cpp  Helper.cpp
include/: App.hpp  Window.hpp  window.hpp
src/: App.cpp  App.hpp  CMakeLists.txt  DebugUtils.hpp  Device.cpp  Device.hpp  Main.cpp  Window.cpp  Window.hpp  app.hpp  main.cpp  window.cpp  window.hpp
src/Device/: Debug.cpp  Device.cpp  Device.hpp  DeviceEx.cpp  DeviceExt.cpp  DeviceHelper.cpp  DeviceStructs.cpp  DeviceStructs.hpp  DeviceUtils.cpp  DeviceUtils.hpp  Structs.cpp
